# prompt-faster

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql  002_api_credentials_and_teacher_settings.sql  003_create_test_sets.sql  004_add_is_template_to_test_sets.sql  005_add_dify_config_to_test_sets.sql  006_add_generic_config_to_test_sets.sql  007_create_optimization_tasks.sql  008_create_iterations.sql  009_add_final_prompt.sql  010_checkpoints_table.sql  011_add_recovery_metrics.sql  012_checkpoint_rollback_support.sql  013_history_events.sql  014_teacher_prompts.sql  015_add_teacher_prompt_version_id_to_optimization_tasks.sql  016_add_diversity_baselines.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  response.rs  state.rs
backend/src/api/handlers/: mod.rs
backend/src/api/middleware/: auth.rs  connectivity.rs  correlation_id.rs  login_attempt.rs  mod.rs  session.rs
backend/src/api/routes/: auth.rs  checkpoints.rs  diagnostic.rs  dify.rs  diversity.rs  docs.rs  generic.rs  health.rs  history.rs  iteration_control.rs  iterations.rs  meta.rs  meta_optimization.rs  mod.rs  optimization_tasks.rs  recovery.rs  results.rs  test_set_templates.rs  test_sets.rs  user_auth.rs  workspaces.rs
backend/src/api/ws/: connection.rs  events.rs  mod.rs
backend/src/core/: mod.rs  traits.rs
backend/src/core/diagnostic_service/: mod.rs
backend/src/core/diversity_analyzer/: mod.rs
backend/src/core/evaluator/: default_impl.rs  error.rs  example_impl.rs  mod.rs
backend/src/core/execution_target/: dify_impl.rs  error.rs  (+3 more)
backend/src/domain/: mod.rs
backend/src/infra/: mod.rs
backend/src/shared/: config.rs  error.rs  error_codes.rs  log_sanitizer.rs  mod.rs  password.rs  time.rs  tracing_setup.rs  url_validator.rs  ws.rs  ws_bus.rs
backend/tests/: auth_integration_test.rs  checkpoint_cache_test.rs  checkpoint_checksum_test.rs  checkpoint_degrade_test.rs  checkpoint_exports_test.rs  checkpoint_guidance_integration_test.rs  checkpoint_layer_integration_test.rs  checkpoint_models_test.rs  checkpoint_repo_test.rs  checkpoint_save_test.rs  checkpoint_schema_test.rs  checkpoint_wal_test.rs  checkpoints_api_test.rs  config_api_test.rs  connection_test.rs  diversity_analysis_test.rs  diversity_api_test.rs  error_handling_test.rs  event_record_degrade_test.rs  history_api_test.rs  iterations_api_test.rs  llm_retry_integration_test.rs  meta_iteration_stages_api_test.rs  meta_optimization_test.rs  optimization_engine_smoke.rs  optimization_tasks_api_test.rs  recovery_api_test.rs  test_set_dify_variables_api_test.rs  test_set_generic_config_api_test.rs  test_set_templates_api_test.rs  test_sets_api_test.rs  workspaces_api_test.rs  ws_guidance_integration_test.rs  ws_pause_resume_integration_test.rs
(+597 files in other folders)
