[package]
name = "prompt_faster"
version = "0.1.0"
edition = "2024"
authors = ["耶稣"]
description = "AI Prompt 自动迭代优化系统"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步 Trait
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 加密
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# API 文档
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# 时间处理
time = { version = "0.3", features = ["serde"] }

# 类型生成
ts-rs = "10"

# 环境变量
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
