[package]
name = "prompt_faster"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "prompt_faster"
authors = ["耶稣"]
description = "AI Prompt 自动迭代优化系统"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "time", "migrate", "macros"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步 Trait
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 加密
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }  # Code Review Fix: 用于安全清除内存中的敏感数据

# API 文档
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# 时间处理
time = { version = "0.3", features = ["serde", "formatting"] }

# 类型生成
ts-rs = { version = "10", features = ["serde-json-impl", "no-serde-warnings"] }

# 环境变量
dotenvy = "0.15"

# URL 解析
url = "2"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
http-body-util = "0.1.3"

[features]
default = []
alt-optimization-engine = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
